// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App> Renders content 1`] = `"This is UI, and I am a princess!"`;

exports[`<App> Renders error 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: rgba(255,255,255,0.6);
  font-size: 28px;
  padding-right: 50px;
  font-weight: lighter;
}

.c3 {
  font-size: 1.2em;
  font-weight: bold;
  padding-bottom: 10px;
  color: rgba(255,255,255,1);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        Oops!
      </div>
       Something went wrong :(
    </div>
  </div>
</div>
`;

exports[`<App> Renders error 2`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  color: rgba(255,255,255,0.6);
  font-size: 28px;
  padding-right: 50px;
  font-weight: lighter;
}

.c3 {
  font-size: 1.2em;
  font-weight: bold;
  padding-bottom: 10px;
  color: rgba(255,255,255,1);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        Oops!
      </div>
       Something went wrong :(
    </div>
  </div>
</div>
`;

exports[`<App> Renders loader 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-animation: MQNGw 1s linear infinite;
  animation: MQNGw 1s linear infinite;
}

.c1 {
  width: 50px;
  height: 50px;
  border: 3px solid rgba(255,255,255,0.2);
  border-bottom-color: #fc0;
  border-right-color: #fc0;
  border-radius: 100%;
  box-shadow: 0 0 15px rgba(0,0,0,0.3);
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`<App> Renders loader 2`] = `
.c0 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-animation: MQNGw 1s linear infinite;
  animation: MQNGw 1s linear infinite;
}

.c1 {
  width: 50px;
  height: 50px;
  border: 3px solid rgba(255,255,255,0.2);
  border-bottom-color: #fc0;
  border-right-color: #fc0;
  border-radius: 100%;
  box-shadow: 0 0 15px rgba(0,0,0,0.3);
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`<App> Renders loader 3`] = `
.c0 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-animation: MQNGw 1s linear infinite;
  animation: MQNGw 1s linear infinite;
}

.c1 {
  width: 50px;
  height: 50px;
  border: 3px solid rgba(255,255,255,0.2);
  border-bottom-color: #fc0;
  border-right-color: #fc0;
  border-radius: 100%;
  box-shadow: 0 0 15px rgba(0,0,0,0.3);
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;
